--- a/source/index.html
+++ b/source/index.html
@@ -17,13 +17,13 @@
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item">
+          <li class=main-nav__list-item>
             <a href="#">Главная</a>
           </li>
-          <li class="main-nav__item">
+          <li class=main-nav__list-item>
             <a href="#">Фотографии</a>
           </li>
-          <li class="main-nav__item">
+          <li class=main-nav__list-item>
             <a href="#">Конкурс</a>
           </li>
           <li class="main-nav__item">
@@ -34,31 +34,30 @@
     </nav>
   </header>
   <main class="page__main">
-    <h1 class="visually-hidden"> Pink - Взгляните на жизнь
-      иначе!</h1>
-    <section class="app">
-      <div class="app__wrapper">
+    <h1 class="visually-hidden"> Pink - наше приложение</h1>
+    <section class="intro">
+      <div class="intro__wrapper">
         <h2 class="visually-hidden">Скачать приложение</h2>
-        <div class="app__header">
-          <p class="app__slogan">Взгляните на жизнь
+        <div class="intro__header">
+          <p class="intro__slogan">Взгляните на жизнь
             иначе!</p>
         </div>
-        <div class="app__download">
-          <a class="app__download-button" href="#">
+        <div class="intro__download-wrapper">
+          <a class="intro__download-button" href="#">
             Скачать приложение
           </a>
-          <ul class="app__logo-list">
-            <li class="app__logo-item">
+          <ul class="intro__logo-list">
+            <li class="intro__logo-list-item">
               <img src="img/logos/apple-logo.png" alt="Логотип Apple" width="47" height="56">
             </li>
-            <li class="app__logo-item">
+            <li class="intro__logo-list-item">
               <img src="img/logos/android-logo.png" alt="Логотип Android" width="43" height="47">
             </li>
-            <li class="app__logo-item">
+            <li class="intro__logo-list-item">
               <img src="img/logos/microsoft-logo.png" alt="Логотип Windows" width="44" height="41">
             </li>
           </ul>
-          <p class="app__legend">
+          <p class="intro__legend">
             Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
           </p>
         </div>
@@ -81,12 +80,12 @@
             <p class="advantages__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
               несколько кликов!</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__list-item">
             <h3 class="advantages__title">Меняет мир вокруг</h3>
             <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
               усилить эффект</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__list-item">
             <h3 class="advantages__title">Заводит новых друзей</h3>
             <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
               новых</p>
@@ -95,32 +94,32 @@
       </div>
     </section>
     <section class="feedback">
-      <div class="feedback__wrapper slider">
+      <div class="feedback__wrapper">
         <h2 class="visually-hidden">Отзывы о нас</h2>
-        <ul class="feedback__list slider__list">
-          <li class="feedback__item feedback__item--current slider__item">
+        <ul class="feedback__list slider-list">
+          <li class="feedback__list-item feedback__list-item--current slider__list-item">
             <b class="feedback__title">Николай Петров</b>
             <blockquote class="feedback__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
               привычные
               серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
             </blockquote>
           </li>
-          <li class="feedback__item slider__item">
+          <li class="feedback__list-item slider__list-item">
             <!-- Я не нашел в макете другие секции слайдера, поэтому оставил эту ячейку пустой -->
           </li>
         </ul>
-        <p class="feedback__toggles slider__toggles">
-          <button class="slider__toggle slider__toggle--current" type="button">1</button>
-          <button class="slider__toggle" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
+        <p class="feedback__buttons slider__buttons">
+          <button class="slider__button slider__toggle--current" type="button">1</button>
+          <button class="slider__button" type="button">2</button>
+          <button class="slider__button" type="button">3</button>
         </p>
       </div>
     </section>
     <section class="pricing">
-      <div class="pricing__wrapper slider">
+      <div class="pricing__wrapper">
         <h2 class="visually-hidden">Наши цены</h2>
-        <ul class="pricing__list slider__list">
-          <li class="pricing__item slider__item">
+        <ul class="pricing__list slider-list">
+          <li class="pricing__list-item slider__list-item">
             <div class="pricing__headline">
               <h3>База</h3>
               <p>1,99 USD</p>
@@ -129,7 +128,7 @@
             <p>Смайлики</p>
             <p>Комментарии</p>
           </li>
-          <li class="pricing__item pricing__item--current slider__item">
+          <li class="pricing__list-item pricing__list-item--current slider__list-item">
             <div class="pricing__headline">
               <h3>СТАНДАРТ</h3>
               <p>3,99 USD</p>
@@ -138,7 +137,7 @@
             <p>Смайлики</p>
             <p>Комментарии</p>
           </li>
-          <li class="pricing__item slider__item">
+          <li class="pricing__list-item slider__list-item">
             <div class="pricing__headline">
               <h3>АНЛИМ</h3>
               <p>9,99 USD</p>
@@ -148,10 +147,10 @@
             <p>Комментарии</p>
           </li>
         </ul>
-        <p class="pricing__toggles slider__toggles">
-          <button class="slider__toggle" type="button">1</button>
-          <button class="slider__toggle slider__toggle--current" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
+        <p class="pricing__buttons slider__buttons">
+          <button class="slider__button" type="button">1</button>
+          <button class="slider__button slider__toggle--current" type="button">2</button>
+          <button class="slider__button" type="button">3</button>
         </p>
       </div>
     </section>
@@ -162,15 +161,15 @@
           Остались вопросы? Свяжитесь с нами!
         </p>
         <ul class="contacts__list">
-          <li class="contacts__item">
+          <li class="contacts__list-item">
             <h3>Звоните:</h3>
             <a href="tel:+78125556666">+7 (812) 555-66-66</a>
           </li>
-          <li class="contacts__item">
+          <li class="contacts__list-item">
             <h3>Пишите:</h3>
-            <a href="#">mail@htmlacademy.ru</a>
+            <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
-          <li class="contacts__item">
+          <li class="contacts__list-item">
             <h3>Приезжайте в гости:</h3>
             <a href="#">ул. Большая
               Конюшенная, 19/8</a>
@@ -191,17 +190,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-item">
           <a class="footer__social-link" href="#">
-            <img src="img/social icons/twitter.svg" alt="Логотип Twitter" width="18" height="14">
+            <img src="img/social-icons/twitter.svg" alt="Логотип Twitter" width="18" height="14">
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-link" href="#">
-            <img src="img/social icons/facebook.svg" alt="Логотип Facebok" width="9" height="18">
+            <img src="img/social-icons/facebook.svg" alt="Логотип Facebok" width="9" height="18">
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-link" href="#">
-            <img src="img/social icons/youtube.svg" alt="Логотип Youtube" width="15" height="13">
+            <img src="img/social-icons/youtube.svg" alt="Логотип Youtube" width="15" height="13">
           </a>
         </li>
       </ul>
