--- a/source/index.html
+++ b/source/index.html
@@ -48,13 +48,19 @@
           </a>
           <ul class="intro__logo-list">
             <li class="intro__logo-list-item">
-              <img src="img/logos/apple-logo.png" alt="Логотип Apple" width="47" height="56">
+              <a class="intro__download-link" href="#">
+                <img src="img/logos/apple-logo.png" alt="Логотип Apple" width="47" height="56">
+              </a>
             </li>
             <li class="intro__logo-list-item">
-              <img src="img/logos/android-logo.png" alt="Логотип Android" width="43" height="47">
+              <a class="intro__download-link" href="#">
+                <img src="img/logos/android-logo.png" alt="Логотип Android" width="43" height="47">
+              </a>
             </li>
             <li class="intro__logo-list-item">
-              <img src="img/logos/microsoft-logo.png" alt="Логотип Windows" width="44" height="41">
+              <a class="intro__download-link" href="#">
+                <img src="img/logos/microsoft-logo.png" alt="Логотип Windows" width="44" height="41">
+              </a>
             </li>
           </ul>
           <p class="intro__legend">
@@ -75,7 +81,7 @@
           </p>
         </div>
         <ul class="advantages__list">
-          <li class="advantages__item">
+          <li class="advantages__list-item">
             <h3 class="advantages__title">Поднимает настроение</h3>
             <p class="advantages__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
               несколько кликов!</p>
@@ -123,6 +129,7 @@
             <div class="pricing__headline">
               <h3>База</h3>
               <p>1,99 USD</p>
+              <p class="pricing__label-hit">Хит</p>
             </div>
             <p>Розовый фильтр</p>
             <p>Смайлики</p>
@@ -185,7 +192,9 @@
   <footer class="footer">
     <div class="footer__wrapper">
       <p class="footer__logo">
-        <img src="img/logos/pink-footer-logo.svg" alt="Логотип и надпись Pink">
+        <a class="footer__logo-link" href="#">
+          <img src="img/logos/pink-footer-logo.svg" alt="Логотип и надпись Pink">
+        </a>
       </p>
       <ul class="footer__social-list">
         <li class="footer__social-item">
@@ -206,10 +215,12 @@
       </ul>
       <p class="footer__copyright">
         Разработано
-        <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
-          <path fill="#2E368F"
-            d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
-        </svg>
+        <a class="footer__copyright-link" href="https://htmlacademy.ru">
+          <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
+            <path fill="#2E368F"
+              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
+          </svg>
+        </a>
       </p>
     </div>
   </footer>
