исправил указанные ошибки

--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
           <li class=main-nav__list-item>
             <a href="#">Конкурс</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__list-item">
             <a href="#">HTML Academy</a>
           </li>
         </ul>
@@ -102,7 +102,7 @@
     <section class="feedback">
       <div class="feedback__wrapper">
         <h2 class="visually-hidden">Отзывы о нас</h2>
-        <ul class="feedback__list slider-list">
+        <ul class="feedback__list slider__list">
           <li class="feedback__list-item feedback__list-item--current slider__list-item">
             <b class="feedback__title">Николай Петров</b>
             <blockquote class="feedback__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
@@ -124,7 +124,7 @@
     <section class="pricing">
       <div class="pricing__wrapper">
         <h2 class="visually-hidden">Наши цены</h2>
-        <ul class="pricing__list slider-list">
+        <ul class="pricing__list slider__list">
           <li class="pricing__list-item slider__list-item">
             <div class="pricing__headline">
               <h3>База</h3>
@@ -174,7 +174,7 @@
           </li>
           <li class="contacts__list-item">
             <h3>Пишите:</h3>
-            <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
           <li class="contacts__list-item">
             <h3>Приезжайте в гости:</h3>
