--- a/source/index.html
+++ b/source/index.html
@@ -102,15 +102,15 @@
     <section class="feedback">
       <div class="feedback__wrapper">
         <h2 class="visually-hidden">Отзывы о нас</h2>
-        <ul class="feedback__list slider__list">
-          <li class="feedback__list-item feedback__list-item--current slider__list-item">
+        <ul class="feedback__list slider-list">
+          <li class="feedback__list-item feedback__list-item--current slider-list__item">
             <b class="feedback__title">Николай Петров</b>
             <blockquote class="feedback__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
               привычные
               серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
             </blockquote>
           </li>
-          <li class="feedback__list-item slider__list-item">
+          <li class="feedback__list-item slider-list__item">
             <!-- Я не нашел в макете другие секции слайдера, поэтому оставил эту ячейку пустой -->
           </li>
         </ul>
@@ -124,8 +124,8 @@
     <section class="pricing">
       <div class="pricing__wrapper">
         <h2 class="visually-hidden">Наши цены</h2>
-        <ul class="pricing__list slider__list">
-          <li class="pricing__list-item slider__list-item">
+        <ul class="pricing__list slider-list">
+          <li class="pricing__list-item slider-list__item">
             <div class="pricing__headline">
               <h3>База</h3>
               <p>1,99 USD</p>
@@ -135,7 +135,7 @@
             <p>Смайлики</p>
             <p>Комментарии</p>
           </li>
-          <li class="pricing__list-item pricing__list-item--current slider__list-item">
+          <li class="pricing__list-item pricing__list-item--current slider-list__item">
             <div class="pricing__headline">
               <h3>СТАНДАРТ</h3>
               <p>3,99 USD</p>
@@ -144,7 +144,7 @@
             <p>Смайлики</p>
             <p>Комментарии</p>
           </li>
-          <li class="pricing__list-item slider__list-item">
+          <li class="pricing__list-item slider-list__item">
             <div class="pricing__headline">
               <h3>АНЛИМ</h3>
               <p>9,99 USD</p>
