--- a/source/catalog.html
+++ b/source/catalog.html
@@ -55,7 +55,7 @@
               <img src="img/catalog/panorama.jpg" alt="Фото моста" width="320" height="137">
             </p>
             <p class="catalog__label">ПАНОРАМА ДНЯ</p>
-            <b class="catalo__name">Анна<span class="catalog__time">(5 минут назад)</span></b>
+            <b class="catalog__name">Анна<span class="catalog__time">(5 минут назад)</span></b>
             <p class="catalog__comment">Прыгать или нет? Напишите в
               комментарии свой совет и
               смотрите прямую трансляцию в
@@ -73,7 +73,7 @@
             <p class="catalog__image">
               <img src="img/catalog/white-car.jpg" alt="Фото белой машины" width="280" height="180">
             </p>
-            <b class="catalo__name">Левон<span class="catalog__time">(5 часов назад)</span></b>
+            <b class="catalog__name">Левон<span class="catalog__time">(5 часов назад)</span></b>
             <p class="catalog__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
             <button class="catalog__like" type="button">
               <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -88,7 +88,7 @@
             <p class="catalog__image">
               <img src="img/catalog/drum.jpg" alt="Фото моста" width="280" height="180">
             </p>
-            <b class="catalo__name">Антон<span class="catalog__time">(12 часов назад)</span></b>
+            <b class="catalog__name">Антон<span class="catalog__time">(12 часов назад)</span></b>
             <p class="catalog__comment">Соседи будут рады!</p>
             <button class="catalog__like" type="button">
               <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@
             <p class="catalog__image">
               <img src="img/catalog/roof.jpg" alt="Фото крыши" width="280" height="180">
             </p>
-            <b class="catalo__name">Борис<span class="catalog__time">(20 часов назад)</span></b>
+            <b class="catalog__name">Борис<span class="catalog__time">(20 часов назад)</span></b>
             <p class="catalog__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
             <button class="catalog__like" type="button">
               <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -118,7 +118,7 @@
             <p class="catalog__image">
               <img src="img/catalog/bahcha.jpg" alt="Фото кубанская бахча" width="280" height="180">
             </p>
-            <b class="catalo__name">Сергей<span class="catalog__time">(25 часов назад)</span></b>
+            <b class="catalog__name">Сергей<span class="catalog__time">(25 часов назад)</span></b>
             <p class="catalog__comment">Самая кубанская в мире!</p>
             <button class="catalog__like" type="button">
               <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -133,7 +133,7 @@
             <p class="catalog__image">
               <img src="img/catalog/mountains.jpg" alt="Фото гор" width="280" height="180">
             </p>
-            <b class="catalo__name">Максим<span class="catalog__time">(40 часов назад)</span></b>
+            <b class="catalog__name">Максим<span class="catalog__time">(40 часов назад)</span></b>
             <p class="catalog__comment">Где снег-то?</p>
             <button class="catalog__like" type="button">
               <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -148,7 +148,7 @@
             <p class="catalog__image">
               <img src="img/catalog/plane.jpg" alt="Фото крыла самолета" width="280" height="180">
             </p>
-            <b class="catalo__name">Надежда<span class="catalog__time">(45 часов назад)</span></b>
+            <b class="catalog__name">Надежда<span class="catalog__time">(45 часов назад)</span></b>
             <p class="catalog__comment">Всем GM и взаимные лайки!</p>
             <button class="catalog__like" type="button">
               <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
