--- a/source/form.html
+++ b/source/form.html
@@ -4,33 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Pink - Формы регистрации</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+
 </head>
 
 <body class="page__body">
   <header class="header">
-    <a class="header__logo" href="#">
-      <img src="img/logos/pink-header-logo.svg" alt="Логотип Pink" width="74" height="23">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+    <div class="header__wrapper">
+      <a class="header__logo" href="#">
+        <img src="img/logos/pink-header-logo.svg" alt="Логотип Pink" width="74" height="23">
+      </a>
+      <button class="header__nav-toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list">
-          <li class="main-nav__list-item">
-            <a href="#">Главная</a>
-          </li>
-          <li class="main-nav__list-item">
-            <a href="#">Фотографии</a>
-          </li>
-          <li class="main-nav__list-item">
-            <a href="#">Конкурс</a>
-          </li>
-          <li class="main-nav__list-item">
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
+    </div>
+    <nav class="main-nav">
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class=main-nav__list-item>
+              <a href="#">Главная</a>
+            </li>
+            <li class=main-nav__list-item>
+              <a href="#">Фотографии</a>
+            </li>
+            <li class=main-nav__list-item>
+              <a href="#">Конкурс</a>
+            </li>
+            <li class="main-nav__list-item">
+              <a href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
     </nav>
   </header>
 </body>
@@ -47,7 +52,7 @@
   <section class="journey">
     <h2 class="visually-hidden">Форма для вашего путешествия</h2>
     <div class="journey__wrapper">
-      <div class="form__text">
+      <div class="journey__form-text">
         Поделитесь своей историей и получите
         шанс выиграть ценный приз — 1000
         миль на вашу бонусную карту!
@@ -190,11 +195,13 @@
 <section class="modal journey__modal">
   <div class="journey__modal-wrapper">
     <h3 class="journey__modal-headline">Ваша заявка отправлена</h3>
-    <p class="journey__modal-text">Спасибо за ваше участие, ваша заявка
+    <p class="journey__modal-text journey__modal-text">Спасибо за ваше участие, ваша заявка
       уже поступила к нам. В ближайшее
       время мы рассмотрим ее и
       оповестим вас.</p>
-    <button class="button journey__modal-button journey__modal-button-wrapper" type="button">ЗАКРЫТЬ ОКНО</button>
+  </div>
+  <div class="journey__modal-button-wrapper">
+    <button class="button journey__modal-button" type="button">ЗАКРЫТЬ ОКНО</button>
   </div>
 </section>
 
