Исправил указаные ошибки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -205,11 +205,8 @@
                 </g>
               </svg>
             </button>
-            <div class="range range--active">
-              <div class="range__scale">
-                <div class="range__bar"></div>
-              </div>
-              <div class="range__toggle"></div>
+            <div class="editor__range-wrapper editor__range-wrapper--active">
+              <input class="range" type="range" min="1" max="100">
             </div>
           </li>
           <li class="editor__list-item">
@@ -223,11 +220,8 @@
                 </g>
               </svg>
             </button>
-            <div class="range">
-              <div class="range__scale">
-                <div class="range__bar"></div>
-              </div>
-              <div class="range__toggle"></div>
+            <div class="editor__range-wrapper">
+              <input class="range" type="range" min="1" max="100">
             </div>
           </li>
           <li class="editor__list-item">
@@ -243,11 +237,8 @@
                 </g>
               </svg>
             </button>
-            <div class="range">
-              <div class="range__scale">
-                <div class="range__bar"></div>
-              </div>
-              <div class="range__toggle"></div>
+            <div class="editor__range-wrapper">
+              <input class="range" type="range" min="1" max="100">
             </div>
           </li>
         </ul>
