--- a/source/form.html
+++ b/source/form.html
@@ -121,15 +121,15 @@
             путешествовали?</legend>
           <ul class="journey__radio-list">
             <li class="journey__radio-item">
-              <input type="radio" name="ios" id="for-ios" value="ios">
+              <input type="radio" name="software" id="for-ios" value="ios">
               <label for="for-ios">Pink для iOS</label>
             </li>
             <li class="journey__radio-item">
-              <input type="radio" name="android" id="for-android" value="android">
+              <input type="radio" name="software" id="for-android" value="android">
               <label for="for-android">Pink на Android</label>
             </li>
             <li class="journey__radio-item">
-              <input type="radio" name="windows" id="for-windows" value="windows">
+              <input type="radio" name="software" id="for-windows" value="windows">
               <label for="for-windows">Windows Phone</label>
             </li>
           </ul>
