--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <header class="header">
-    <div class="header__wrapper">
+    <div class="header__wrapper container">
       <a class="header__logo" href="#">
         <img src="img/logos/pink-header-logo.svg" alt="Логотип Pink" width="74" height="23">
       </a>
@@ -84,32 +84,24 @@
           </p>
         </div>
         <div class="advantages__list-wrapper">
-          <ul class="advantages__screen-list">
-            <li class="advantages__screen-item">
-              <img class="advantages__screen-img" src="img/content/screen-gray.png" alt="Серый экран">
-            </li>
-            <li class="advantages__screen-item">
-              <img class="advantages__screen-img" src="img/content/screen-pink.png" alt="Розовый экран">
-            </li>
-            <li class="advantages__screen-item advantages__screen-item--visible">
-              <img class="advantages__screen-img" src="img/content/screen-smile.png" alt="Розовый экран со смайликом">
-            </li>
-          </ul>
           <ul class="advantages__list">
             <li class="advantages__list-item">
               <h3 class="advantages__title">Поднимает настроение</h3>
               <p class="advantages__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
                 несколько кликов!</p>
+              <img class="advantages__img" src="img/content/screen-gray.png" alt="Серый экран">
             </li>
             <li class="advantages__list-item">
               <h3 class="advantages__title">Меняет мир вокруг</h3>
               <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
                 усилить эффект</p>
+              <img class="advantages__img" src="img/content/screen-pink.png" alt="Розовый экран">
             </li>
             <li class="advantages__list-item">
               <h3 class="advantages__title">Заводит новых друзей</h3>
               <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
                 новых</p>
+              <img class="advantages__img advantages__img--visible" src="img/content/screen-smile.png" alt="Розовый экран со смайликом">
             </li>
           </ul>
         </div>
